[gd_scene load_steps=10 format=3 uid="uid://dylnjo762rsqo"]

[ext_resource type="Script" path="res://Scripts/forge.gd" id="1_8xlhv"]
[ext_resource type="Texture2D" uid="uid://b1p85yai67mqw" path="res://_Art/Forge/ForgeBG-temp.png" id="2_01e6s"]
[ext_resource type="PackedScene" uid="uid://dittm8xt3v3dp" path="res://Scenes/rhythm_forge/conductor.tscn" id="2_nd8ja"]
[ext_resource type="PackedScene" uid="uid://c2qvh0ey1jh6g" path="res://Scenes/rhythm_forge/rhythm_button.tscn" id="4_335gy"]
[ext_resource type="AudioStream" uid="uid://dmqw72kqwstxf" path="res://_Music/M_44_120bpm_LP_Forge.wav" id="4_iu3lw"]

[sub_resource type="Animation" id="Animation_1k651"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ComboExclamation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_5rt2p"]
resource_name = "combo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ComboExclamation:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1), Vector2(0.3, 0.3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ebk52"]
resource_name = "nicework"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jnjy"]
_data = {
"RESET": SubResource("Animation_1k651"),
"combo": SubResource("Animation_5rt2p"),
"nicework": SubResource("Animation_ebk52")
}

[node name="Forge" type="Node2D"]
scale = Vector2(0.6, 0.6)
script = ExtResource("1_8xlhv")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_01e6s")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 808.333
offset_top = 193.333
offset_right = 1392.33
offset_bottom = 330.333
theme_override_colors/font_color = Color(0.937255, 0.298039, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 100
text = "NICE WORK!"

[node name="Guiding_Lines" type="Node2D" parent="."]
position = Vector2(10, -18.3333)
scale = Vector2(1.65, 1.65)

[node name="Line2D" type="Line2D" parent="Guiding_Lines"]
position = Vector2(62, -350)
scale = Vector2(0.6, 0.6)
points = PackedVector2Array(1196.67, 508.333, 1196.67, 1708.33, 1196.67, 423.333)
width = 5.0
default_color = Color(0.0313726, 0.0313726, 0.0313726, 0.286275)

[node name="Line2D2" type="Line2D" parent="Guiding_Lines"]
position = Vector2(-59, -350)
scale = Vector2(0.6, 0.6)
points = PackedVector2Array(1196.67, 508.333, 1196.67, 1708.33, 1196.67, 423.333)
width = 5.0
default_color = Color(0.0313726, 0.0313726, 0.0313726, 0.286275)

[node name="Line2D3" type="Line2D" parent="Guiding_Lines"]
position = Vector2(-179, -350)
scale = Vector2(0.6, 0.6)
points = PackedVector2Array(1196.67, 508.333, 1196.67, 1708.33, 1196.67, 423.333)
width = 5.0
default_color = Color(0.0313726, 0.0313726, 0.0313726, 0.286275)

[node name="Line2D4" type="Line2D" parent="Guiding_Lines"]
position = Vector2(116, -329)
scale = Vector2(0.6, 0.6)
points = PackedVector2Array(1196.67, 508.333, 1196.67, 1708.33, 1196.67, 423.333)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="Line2D5" type="Line2D" parent="Guiding_Lines"]
position = Vector2(-231, -322)
scale = Vector2(0.6, 0.6)
points = PackedVector2Array(1196.67, 508.333, 1196.67, 1708.33, 1196.67, 423.333)
width = 5.0
default_color = Color(0, 0, 0, 1)

[node name="Conductor" parent="." instance=ExtResource("2_nd8ja")]
stream = ExtResource("4_iu3lw")
autoplay = true
bpm = 120

[node name="Combo" type="Label" parent="."]
offset_left = 550.0
offset_top = 1000.0
offset_right = 590.0
offset_bottom = 1077.0
theme_override_colors/font_color = Color(0.894118, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = 1400.0
offset_top = 1000.0
offset_right = 1503.0
offset_bottom = 1077.0
theme_override_colors/font_color = Color(0.933333, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 56
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboExclamation" type="Label" parent="."]
offset_left = 918.333
offset_top = 160.0
offset_right = 1353.33
offset_bottom = 267.0
rotation = 0.436332
theme_override_colors/font_color = Color(0, 0.823529, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 78
text = "10 in a row!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rhythm_Button_Right" parent="." instance=ExtResource("4_335gy")]
position = Vector2(1300, 1015)
input = "ui_right"

[node name="Rhythm_Button_Up" parent="." instance=ExtResource("4_335gy")]
position = Vector2(1100, 1015)
rotation = -1.5708
input = "ui_up"

[node name="Rhythm_Button3_Left" parent="." instance=ExtResource("4_335gy")]
position = Vector2(900, 1015)
rotation = 3.14159
scale = Vector2(1, -1)
input = "ui_left"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6jnjy")
}

[connection signal="beat" from="Conductor" to="." method="_on_conductor_beat"]
[connection signal="finished" from="Conductor" to="." method="_on_conductor_finished"]
[connection signal="measure_sig" from="Conductor" to="." method="_on_conductor_measure_sig"]
